Add movie detail page and fix 500 error

--- a/templates/bookings/base.html
+++ b/templates/bookings/base.html
@@ -136,6 +136,7 @@
             color: white;
             text-decoration: none;
             border-radius: 6px;
+            font-weight: bold;
         }
 
 
