--- a/templates/bookings/base.html
+++ b/templates/bookings/base.html
@@ -146,7 +146,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top mb-5">
         <div class="container">
-            <a class="navbar-brand fw-bold fs-3" href="{% url 'index' %}">
+            <a class="navbar-brand fw-bold fs-3" href="/">
                 CINE<span class="text-danger">PASS</span>
             </a>
 
@@ -157,10 +157,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto align-items-center">
                     <li class="nav-item">
-                        <a class="nav-link active" href="{% url 'index' %}">Home</a>
+                        <a class="nav-link active" href="/">Home</a>
                     </li>
                     <li class="nav-item ms-lg-3">
-                        <a href="{% url 'admin_dashboard' %}" class="btn btn-outline-danger btn-sm rounded-pill px-3">
+                        <a href="/admin/" class="btn btn-outline-danger btn-sm rounded-pill px-3">
                             Admin Dashboard
                         </a>
                     </li>
